[Layout View] Fixed PTSDK-655:Content area too small by default

--- a/src/css/composer.css
+++ b/src/css/composer.css
@@ -60,6 +60,7 @@
 }
 .nrc-sortable-container.ui-content {
     padding: 0px 10px;
+    min-height: 80px;
 }
 .nrc-sortable-container.empty:after,
 .nrc-sortable-container:empty:after {
